# RAG

./: README.md  pyproject.toml  requirements.txt
.cursor/rules/: langchain-1-imports.mdc
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/structured_files/: inventory.xlsx
1-VectorEmbeddingAndDatabases/: embedding.ipynb  openaiembeddings.ipynb
2-Vector Stores/: 1-chromadb.ipynb  2-faiss.ipynb  3-Othervectorstores.ipynb
2-Vector Stores/chroma_db/: chroma.sqlite3
2-Vector Stores/faiss_index/: index.faiss  index.pkl
3-AdvancedChunking/: 1-semanticchunking.ipynb  langchain_intro.txt
4-Hybrid Search Strategies/: 1-densesparse.ipynb  2-reranking.ipynb  3-mmr.ipynb
5-Query Enhancement/: 1-queryexpansion.ipynb  2-querydecomposition.ipynb  3-HyDe.ipynb
5-Query Enhancement/output/langchain/: chroma.sqlite3
5-Query Enhancement/output/steve_jobs.db/: chroma.sqlite3
5-Query Enhancement/output/steve_jobs_for_hyde.db/: chroma.sqlite3
6-MultiModal RAG/: 1-multimodalopenai.ipynb
Vector Database/: 0-Datastaxdb.ipynb  1-Pindeconedb.ipynb
