[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.5.5",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "langchain>=0.2.0",
    "langchain-astradb>=1.0.0",
    "langchain-community>=0.0.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=0.0.1",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=0.0.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdfminer>=20191125",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "qu>=1.2.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "unstructured[docx]>=0.22.21",
]
